# Service-Oreinted-Computing

protocol_using_bspl/bungie-master/: .gitignore  README.org  agent.docker  setup.cfg
protocol_using_bspl/bungie-master/bungie/: __init__.py  adapter.py  emitter.py  policies.py  policy.gr  receiver.py  scheduler.py  schema.py  statistics.py  store.py
protocol_using_bspl/bungie-master/lib/: natural_cron.py
protocol_using_bspl/bungie-master/scenarios/: scenarios.org
protocol_using_bspl/bungie-master/scenarios/contracting/: configuration.py  contracting.bspl  contractor.py  government.py  start.sh
protocol_using_bspl/bungie-master/scenarios/logistics/: configuration.py  enabled-set-merchant.py  labeler.py  logistics.bspl  merchant.py  packer.py  start.sh  traditional-packer.py  wrapper.py
protocol_using_bspl/bungie-master/scenarios/prescription/: configuration.py  configuration_ack.py  configuration_forward.py  configuration_remind.py  docker-compose.yml  doctor.py  patient.py  pharmacist.py  prescription-ack.bspl  prescription-forward.bspl  prescription-remind.bspl  prescription.bspl
protocol_using_bspl/bungie-master/scenarios/want-willpay/: buyer.py  configuration.py  docker-compose.yml  seller.py  want-willpay.bspl
protocol_using_bspl/bungie-master/tests/: test_adapter.py  test_emitter.py  test_history.py  test_message.py  test_policies.py  test_scheduler.py  test_statistics.py
protocol_using_bspl/protocheck-master/: .gitignore  LICENSE  Makefile  README.org  setup.cfg  setup.py  tox.ini
protocol_using_bspl/protocheck-master/protocheck/: buyer-seller-protocol.json  commands.py  main.py  node_red.py  protocol.py  utils.py
protocol_using_bspl/protocheck-master/protocheck/bspl/: __init__.py  bspl.gr  build.py
protocol_using_bspl/protocheck-master/protocheck/test/: bspl_test.py  (+6 more)
(+60 files in other folders)
