[metadata]
name = bungie
version = 0.1.0
author = Samuel Christie
author_email = schrist@ncsu.edu
description = Agent implementation framework
long_description = file:README.org
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
	Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    
[options]
packages = find:
install_requires =
    TatSu
    aiocron
    pyyaml
    ijson
    aiorun
    uvloop
    protocheck @ git+https://gitlab.com/masr/protocheck.git
include_package_data = True
test_suite = bungie

[options.packages.find]
exclude =
        build*
        docs*
        tests*

[options.extras_require]
testing =
        pytest
        pytest-asyncio

[options.package_data]
* = *.gr
