[metadata]
name = protocheck
version = 0.4.0
author = Samuel Christie
author_email = schrist@ncsu.edu
description = Protocol verification tool for BSPL
long_description = file:README.org
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
	Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
setup_requires =
    TatSu
install_requires =
    TatSu
    simplejson
    ttictoc
    fire
include_package_data = True

[options.entry_points]
console_scripts =
    bspl = protocheck.main:main

[options.packages.find]
exclude =
        build*
        docs*
        tests*

[options.extras_require]
testing =
        pytest
